from deck import Deck
from player import BlackjackPlayer
from table import Table


class Game:
    pass


class BlackjackGame(Game):
    def __init__(self, deck, player, table):
        self.deck = deck
        self.player = player
        self.table = table

    class BlackjackGameLoop:
        def __init(self):
            pass

        def check_for_bust(self):
            pass

        def check_for_win(self):
            pass

        def run(self):
            pass
        